Se corrigio errores de Dockerfile